# space-build

./: .gitignore  Cargo.toml  README.md  arch.drawio
.github/workflows/: default.yml
client/: Cargo.toml
client/Assets/: Connection.cs  main.cs  tile.prefab
client/Assets/Scenes/: SampleScene.unity
client/ProjectSettings/: ProjectSettings.asset
client/src/: main.rs
server/: .gitignore  Cargo.toml
server/client/: Cargo.toml
server/client/src/: main.rs
server/server/: Cargo.toml
server/server/src/: main.rs
server/src/: error.rs  game.rs  lib.rs  main.rs
server/src/world/: body.rs  galaxy.rs  player.rs  system.rs
src/: error.rs  game_server.rs  lib.rs  player_client.rs
src/world/: galaxy.rs  mod.rs  player.rs  temporal.rs
