[package]
name = "space-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
test = false
doctest = false

[[bin]]
name = "test_client"
test = false
doctest = false

[lib]
name = "space_build"
doctest = false

[dependencies]
crossterm = {version = "0.28.1", features = ["event-stream"]}
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
test-context = "0.3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = {version = "0.26.0", features = ["tokio-comp"]}
regex = "1.10.5"
rand = "0.8.5"
anyhow = "1.0.86"
uuid = {version = "1.10.0", features = ["v4","fast-rng","macro-diagnostics","serde"]}
nalgebra = {version = "0.33.0", features = ["serde-serialize"]}

[dev-dependencies]
serial_test = "3.1.1"
