[package]
name = "cli-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3"
url = "2.2"
log = "0.4.22"
tracing = "0.1"
tracing-subscriber = "0.3"
server = {path = "../server"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"