[package]
name = "space-build-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.28"
bincode = "1.3"
nalgebra = "0.33.0"
